--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
 					  </div>
 					  
 					  
-					  <div class="grid_11">
-						<img class="box-content" alt="" src="./content/3G_m.png"
-                        ">
+					  <div class="grid_13">
+						<img class="box-content" alt="" src="./content/3G_m.png">
 					  </div>
 					  <div class="clearfix"></div>
 				</div>
