--- a/openbts-umts.html
+++ b/openbts-umts.html
@@ -18,7 +18,7 @@
 					
 					</div>
 					<div class="logo">
-					<img class="imglogo" alt=""  src="logo.png">
+					<img class="imglogo" alt=""  src="logo2.png">
 					</div>
 		
 		</div>
@@ -31,11 +31,11 @@
 	
       <div class="span3">
           <ul class="nav nav-list">
-		<h4><a href="#1. Dependencies">1. Dependencies Installation</a></h4>
-		<h4><a href="#2. OpenBTS-UMTS">2. OpenBTS-UMTS Installation</a></h4>
-        <h4><a href="#3. Configure">3. OpenBTS-UMTS Configuration</a></h4>
-        <h4><a href="#4. Registry">4. Subscriber Registry</a></h4>
-        <h4><a href="#5. Run">5. OpenBTS-UMTS Launch</a></h4>
+		<a href="#1. Dependencies">1. Dependencies Installation</a>
+		<a href="#2. OpenBTS-UMTS">2. OpenBTS-UMTS Installation</a>
+        <a href="#3. Configure">3. OpenBTS-UMTS Configuration</a>
+        <a href="#4. Registry">4. Subscriber Registry</a>
+        <a href="#5. Run">5. OpenBTS-UMTS Launch</a>
 		</li>
 		</ul>
       </div>
