--- a/coverage_capacity.html
+++ b/coverage_capacity.html
@@ -431,7 +431,7 @@ img {
 <img style="margin:0px auto;display:block" alt="" src="./content/coverage/8.jpg">
 <p>With current GSM technology, we have an upper limit of a 35 km radius of coverage due to timing advance limitation (see, <a href="http://www.etsi.org/deliver/etsi_en/300900_300999/300912/08.03.01_60/en_300912v080301p.pdf">GSM 05.10</a>). and this requires a high tower. Generally, we propose to use several 3W or 10W base stations with 7-10 m masts. Also, please note, that sensitivity of MS and power of BTS a lower for the EDGE, as it uses 8-PSK modulation instead of GMSK. For details, please see <a href="http://www.etsi.org/deliver/etsi_ts/145000_145099/145005/10.08.00_60/ts_145005v100800p.pdf">3GPP TS 45.005</a>.</p>
 
-<h4><a name="2. Capacity"></a>Capacity<a class="anchorlink" href="#2. Capacity"></a></h4>
+<h4><a name="2. Capacity"></a>2. Capacity<a class="anchorlink" href="#2. Capacity"></a></h4>
 <p>Carrier-grade UmSITE base stations are based on the industrial-grade UmTRX transceiver, that supports two full-duplex and fully independent RF channels. Both independent RF channels can run on any frequency from 0.3-3.8GHz and provide 16 timeslots (8 timeslots each). One of the provided timeslots is used for the signalling, so 15 timeslots left can provide up to 15 concurrent calls on GSM Full Rate or up to 30 concurrent calls on GSM Half Rate (for details see <a href="http://www.etsi.org/deliver/etsi_en/300900_300999/300969/08.00.01_60/en_300969v080001p.pdf">description</a>).</p>
 <p>To estimate, how much subscribers can one base station serve, it's reasonable to refer to the Erlang loss formula, which allows to calculate the probability of call losses for a group of identical parallel resources (channels in our case).</p>
 <img style="float:right" alt="" src="./content/coverage/f_4.jpg">
@@ -497,7 +497,7 @@ img {
 <p>The plot below demonstrates the dependency between number of subscribers and probability of blocking with different load per one subscriber using Half Rate codec:</p>
 <img style="margin:0px auto;display:block" alt="" src="./content/coverage/10.jpg">
 
-<h4><a name="3. Appendix"></a>3. Erlang B Traffic Table.<a class="anchorlink" href="#3. Appendix"></a></h4>
+<h4><a name="3. Appendix"></a>3. Erlang B Traffic Table<a class="anchorlink" href="#3. Appendix"></a></h4>
 <img style="margin:0px auto;display:block" alt="" src="./content/coverage/erlang.jpg">
 <p style="text-align:center;">Table 5. Number of channels to blocking probability in %.</p>
 
