more typo fixed

--- a/coverage_capacity.html
+++ b/coverage_capacity.html
@@ -33,7 +33,7 @@
           <ul class="nav nav-list">
 		<a href="#1. Coverage">1. Coverage</a>
 		<a href="#2. Capacity">2. Capacity</a>
-        <a href="#3. Appendix">3. Erlang B Traffic Table.</a>        
+        <a href="#3. Appendix">3. Erlang B Traffic Table</a>        
 		</li>
 		</ul>
       </div>
