dot removed from article description

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					  <div class="grid_6">
 						 <h5 style="text-align: center;" class="font_5">Coverage and capacity</h5>
 						  <div class="s2"></div>
-						 <center><p>This document will provide an insight on how to roughly estimate the coverage and capacity of the mobile networks based on the Fairwaves architecture and equipment. </p></center>
+						 <center><p>This document will provide an insight on how to roughly estimate the coverage and capacity of the mobile networks based on the Fairwaves architecture and equipment</p></center>
 						  <a class="btn" href="coverage_capacity.html"><span>View Manual</span></a>
 
 					  </div>
