Real time output power control syntaxis link fix

--- a/soft_conf.html
+++ b/soft_conf.html
@@ -1752,7 +1752,7 @@ to introspect the application.</p>
 					
 <p>max_power_red parameter specifies how much dB power can be reduced</p>
 <p>if you have 3W output power ~ 35 dBm and for the test purposes assume you may need 0.2W ~ 23 dBm, then set max_power_red = 35 - 23 = 12.
-<p>use a <a hfref='http://coolconversion.com/electronics/W-dBm/'>free tool to convert Watt to dBm</a></p>
+<p>use a <a href='http://coolconversion.com/electronics/W-dBm/'>free tool to convert Watt to dBm</a></p>
 
 
 <p><strong>NOTE:</strong>In terms of ABIS specific, only even values allow</p>
