--- a/umdesk.html
+++ b/umdesk.html
@@ -367,7 +367,7 @@ img {
 <br>
 <br>
 <h4><a name="1.UmDESK"></a>1. UmDESK<a class="anchorlink" href="#1.UmDESK"></a></h4>
-<p><img src="http://s019.radikal.ru/i608/1409/60/3a29878257fd.png" /></p>
+<p><img src="./content/umdesk/umdesk.png" /></p>
 <p>The UmDESK is an IP-backhaul GSM Network In The Box shaped in mini-ITX case which has the ability to work separately as BTS and BSC. As NITB, it includes BSC, MSC, HLR, VLR, and SMSC core network components.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
 <br><br>
@@ -464,15 +464,15 @@ img {
 <ul>
 <li>&#8226 BTS-only (variant of connection of the BTS to an external BSC)</li>
 </ul>
-<p><img src="http://s020.radikal.ru/i722/1409/54/841d04fe7f23.png" /></p>
+<p><img src="./content/umdesk/msc-bsc.png" /></p>
 <ul>
 <li>&#8226 BSC  (BTS run as an internal instance of OpenBSC)</li>
 </ul>
-<p><img src="http://s013.radikal.ru/i323/1409/b0/18794da5f2b1.png" /></p>
+<p><img src="./content/umdesk/msc.png" /></p>
 <ul>
 <li>&#8226 NITB (Fully autonomous GSM PBX with VoIP gateway (SIP interface))</li>
 </ul>
-<p><img src="http://i068.radikal.ru/1409/01/5150385cd640.png" /></p>
+<p><img src="./content/umdesk/voip.png" /></p>
 <p>The difference between those variants is only in the installed and configured software packages on the Linux-based OS.  
 </p>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
@@ -508,7 +508,7 @@ img {
 <p>4. Select <u>Search networks</u></p>
 </li>
 </ol>
-<p><img src="http://s61.radikal.ru/i171/1505/07/60f9ce0b5a97.png" /></p>
+<p><img src="./content/umdesk/testcall.png" /></p>
 <p><strong>Options:</strong>
 </p>
 <ul>
