--- a/umsite.html
+++ b/umsite.html
@@ -368,7 +368,7 @@ img {
 <br>
 <br>
 <h4><a name="1.UmSITE"></a>1. UmSITE<a class="anchorlink" href="#1.UmSITE"></a></h4>
-<p><img src="http://i074.radikal.ru/1501/99/211623961215.jpg" /></p>
+<p><img src="./content/umsite/umsite.jpg" /></p>
 <p>The UmSITE is an IP-backhaul GSM Base Station, seamlessly integrating functionality that is usually provided by GSM components such as BSC, MSC, VLR, HLR and SMSC. Its software-centric design enables unprecedented flexibility, supporting remote configuration, maintenance and upgrade, and covering everything from transmit power control to end user features.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
 <br>
@@ -429,7 +429,7 @@ img {
 <p>UmSITE-TM3 (60~80W) IP65:  <a href="http://www.onlinecomponents.com/mean-well-hlg60h15a.html?p=43545144">Mean Well HLG-60H-15A</a></p>
 <p>Indoor power supply: Any basic <a href="http://www.amazon.com/Universal-Laptop-Notebook-Power-Adapter/dp/B00406ITIA/ref=sr_1_11?ie=UTF8&amp;qid=1429815258&amp;sr=8-11&amp;keywords=laptop+charger">laptop charger</a> can be used</p>
 <h4>Power/COM-port wires connection schema</h4>
-<p><img src="http://s018.radikal.ru/i527/1508/9a/b63174d67c20.png" /></p>
+<p><img src="./content/umsite/wire.png" /></p>
 <h4>Antenna</h4>
 <p>Fairwaves does not provide GSM antennas. You can use any other antennas suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
@@ -481,10 +481,10 @@ img {
 <h4><a name="2.1 Antennas installation"></a>2.1 Antennas installation<a class="anchorlink" href="#2.1	Antennas installation"></a></h4>
 <p>Each of the antennas complement each other. The second antenna must have the same position as the first antenna on a mast, as well as the same direction and incline angle to the ground.  </p>
 <p>For the GPS antenna, there are no strict requirements, only good antenna visibility to the sky</p>
-<p><img src="http://s019.radikal.ru/i618/1507/f7/780db1eb7edf.png" /></p>
+<p><img src="./content/umsite/a1.png" /></p>
 <hr />
 <p>For the mast at least of 100 feet (30m) in height, antennas can be mounted upright within the 10 foot (3m) distance between each other.</p>
-<p><img src="http://s50.radikal.ru/i130/1507/7a/eb8b60961081.png" /></p>
+<p><img src="./content/umsite/a2.png" /></p>
 <p><strong>NOTE:</strong> Every cell is configured with a <a href="https://en.wikipedia.org/wiki/Broadcast_control_channel">BCCH</a> carrier. 
 Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p>
 <p>Therefore, TRX1 antenna  has to be situated below the TRX2 antenna. For example, if the connection would be established when the TRX1 antenna is higher and then it has been assigned to a timeslot of the lower antenna TRX2, call connection could be lost. </p>
@@ -500,7 +500,7 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 </li>
 </ol>
 <p><strong>NOTE:</strong> We strongly recommend not putting UmSITE on a public network. Connect it to your local network where there is access to the Internet through NAT or Firewall. Keep UDP port 1195 open on your server for Fairwaves VPN in case  of technical support</p>
-<p><img src="http://s019.radikal.ru/i633/1505/04/7e1b573f0b89.png" /></p>
+<p><img src="./content/umsite/fire.png" /></p>
 <p>Take any GSM phone with any SIM card and try to search the network. The network might have a different name, such as <u>Fairwaves, 1011, Test, etc.</u></p>
 <h4><a name="2.3 Test call"></a>2.3 Test call<a class="anchorlink" href="#2.3 Test call"></a></h4>
 <h4>Searching for the Network</h4>
@@ -521,7 +521,7 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <p>4. Select <u>Search networks</u></p>
 </li>
 </ol>
-<p><img src="http://s61.radikal.ru/i171/1505/07/60f9ce0b5a97.png" /></p>
+<p><img src="./content/umsite/testcall.png" /></p>
 <p><strong>Options:</strong>
 </p>
 <ul>
@@ -557,9 +557,9 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <li>2. Test RAM memory</li>
 </ol>
 <p>First of all, you have to use <a href="http://www.ebay.com/sch/i.html?_from=R40&_trksid=p2050601.m570.l1311.R1.TR11.TRC1.A0.H2.Xusb+serial+a.TRS0&_nkw=usb+serial+adapter&_sacat=0">USB Serial Adapter</a> for the connection (which is not included in a standard UmSITE package).</p>
-<p><img src="http://s017.radikal.ru/i422/1505/62/53fa6e8aaad9.jpg" /></p>
+<p><img src="./content/umsite/serial.jpg" /></p>
 <p>For the Windows user <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
-<p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
+<p><img src="./content/umsite/putty.png" /></p>
 <p>You can find a number of the COM port at the <u>Desktop manager</u>. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
 
