--- a/how_to's.html
+++ b/how_to's.html
@@ -500,7 +500,7 @@ sudo make install
 
 <a name="6. How to set up a MultiBTS"></a><h4>6. How to set up a MultiBTS<a class="anchorlink" href="#6. How to set up a MultiBTS"></a></h4>
 
-<p><img src="http://s017.radikal.ru/i400/1501/92/d49ef7c4de2a.png" /></p>
+<p><img src="./content/soft/multibts.png" /></p>
 <ul>
 <li>BSC: osmo-nitb 172.30.1.10</li>
 <li>BTS1: osmo-bts-1 172.30.1.11</li>
