--- a/soft_conf.html
+++ b/soft_conf.html
@@ -505,7 +505,7 @@ img {
 <p>A GSM network is made up of multiple components and interfaces that facilitate sending and receiving of signaling and traffic messages. It is
 a collection of transceivers, controllers, switches, routers, and registers.
 The GSM network can be divided into the following parts.</p>
-<p><img src="http://s47.radikal.ru/i117/1503/82/cd1fa45d5acc.png" /></p>
+<p><img src="./content/soft/gsm.png" /></p>
 <h4>Mobile Station (MS)</h4>
 <p>is made up of two components:</p>
 <ul>
@@ -568,12 +568,12 @@ You can get more information about specification, protocol stack, security, etc.
 use of effective voice compression algorithms.</p>
  For more details: <a href="https://fairwaves.co/wp/equipment/" title="fairwaves.co"><strong>fairwaves.co</strong></a> and <a href="http://umtrx.org/hardware/"><strong>umtrx.org</strong></a></p>
 <p>This software is licensed under GNU Affero General Public License Version 3. Refer to <a href="http://openbsc.osmocom.org/trac/wiki/osmo-nitb"><strong>osmocom</strong></a> for details.</p>
-<p><img src="http://s018.radikal.ru/i522/1501/d0/b4e90e8fe0bd.png" />
+<p><img src="./content/soft/umsite.png" />
 <p>The <u>UmSITE</u> is more than simply a rugged BTS and is essentially a complete <u>network-in-a-box</u>, seamlessly integrating functionality that is usually provided by GSM components such as BSC, MSC, VLR, HLR and SMSC. Its software-centric design enables unprecedented flexibility, supporting remote configuration, maintenance and upgrade, and covering everything from transmit power control to end user features.
 </p>
-<p><img src="http://s017.radikal.ru/i414/1501/51/eac454667177.png" /></p>
+<p><img src="./content/soft/um-sc.png" /></p>
 <p>Independent Base stations (UmSITE) can be clustered through a distributed HLR connected via peer to peer links</p>
-<p><img src="http://s020.radikal.ru/i709/1501/40/96d0dd3429eb.png" /></p>
+<p><img src="./content/soft/cluster.png" /></p>
 <h4>Core Network</h4>
 <p>The UmCORE technology provides synchronization across distributed UmSITE installations, and enables integration with existing networks via VoIP and SS7.</p>
 <p>Features include:</p>
@@ -628,9 +628,9 @@ use of effective voice compression algorithms.</p>
 <li>2. Test RAM memory</li>
 </ol>
 <p>First of all, you have to use <a href="http://www.ebay.com/sch/i.html?_from=R40&_trksid=p2050601.m570.l1311.R1.TR11.TRC1.A0.H2.Xusb+serial+a.TRS0&_nkw=usb+serial+adapter&_sacat=0">USB Serial Adapter</a> for the connection (which is not included in a standard UmSITE package).</p>
-<p><img src="http://s017.radikal.ru/i422/1505/62/53fa6e8aaad9.jpg" /></p>
+<p><img src="./content/soft/serial.jpg" /></p>
 <p>For the Windows user <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
-<p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
+<p><img src="./content/soft/putty.png" /></p>
 <p>You can find a number of the COM port at the <u>Desktop manager</u>. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
 <p>Run this command to connect via serial cable:</p>
@@ -984,7 +984,7 @@ Refer to Osmocom documentation for details:</p>
 
 <p>This example has shown how to configure BSC to run with 2 separate BTS.</p>
 <p>We have one system running the BSC/NITB software and two BTS that are built on the OsmoBTS software.</p>
-<p><img src="http://s017.radikal.ru/i400/1501/92/d49ef7c4de2a.png" /></p>
+<p><img src="./content/soft/multibts.png" /></p>
 <ul>
 <li>BSC: osmo-nitb 172.30.1.10</li>
 <li>BTS1: osmo-bts-1 172.30.1.11</li>
